// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Role {
  id          String @id @default(cuid())
  name        String @unique
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  // Relations
  users User[]

  @@map("roles")
}

model Agency {
  id        String @id @default(cuid())
  name      String @unique
  code      String @unique
  address   String?
  city      String?
  phone     String?
  email     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  users    User[]
  requests Request[]

  @@map("agencies")
}

model User {
  id        String   @id @default(cuid())
  email     String   @unique
  password  String
  firstName String
  lastName  String
  phone     String?
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Foreign Keys
  roleId   String
  agencyId String

  // Relations
  role       Role        @relation(fields: [roleId], references: [id])
  agency     Agency      @relation(fields: [agencyId], references: [id])
  requests   Request[]
  actionLogs ActionLog[]

  @@map("users")
}

model Request {
  id               String        @id @default(cuid())
  requestType      RequestType
  status           RequestStatus @default(SUBMITTED)
  totalAmount      Decimal
  currency         String        @default("TND")
  description      String?
  dispatchedBy     String?
  dispatchedAt     DateTime?
  receivedBy       String?
  receivedAt       DateTime?
  nonCompliance    String?
  nonComplianceDetails String?
  createdAt        DateTime      @default(now())
  updatedAt        DateTime      @updatedAt

  // Foreign Keys
  userId           String
  agencyId         String
  securityTeamId   String?

  // Relations
  user             User                @relation(fields: [userId], references: [id])
  agency           Agency              @relation(fields: [agencyId], references: [id])
  securityTeam     SecurityTeam?       @relation(fields: [securityTeamId], references: [id])
  denominationDetails DenominationDetail[]
  actionLogs       ActionLog[]

  @@map("requests")
}

model SecurityTeam {
  id              String   @id @default(cuid())
  teamName        String
  cinChauffeur    String   // CIN of the driver
  cinTransporteur String   // CIN of the transporter
  assignedBy      String?  // User who assigned the team
  assignedAt      DateTime @default(now())
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  // Relations
  requests        Request[]

  @@map("security_teams")
}

model DenominationDetail {
  id            String   @id @default(cuid())
  denomination  Int      // e.g., 5, 10, 20, 50, 100, 200 for bills; 1000, 500, 200, 100, 50, 20, 10, 5 for coins (in millimes)
  denominationType DenominationType
  quantity      Int
  totalValue    Decimal
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  // Foreign Keys
  requestId     String

  // Relations
  request       Request  @relation(fields: [requestId], references: [id], onDelete: Cascade)

  @@map("denomination_details")
}

model ActionLog {
  id          String   @id @default(cuid())
  action      String
  performedBy String
  userId      String?
  details     String?
  ipAddress   String?
  userAgent   String?
  createdAt   DateTime @default(now())

  // Foreign Keys
  requestId   String?

  // Relations
  user        User?    @relation(fields: [userId], references: [id], onDelete: SetNull)
  request     Request? @relation(fields: [requestId], references: [id], onDelete: SetNull)

  @@map("action_logs")
}

enum RequestType {
  PROVISIONNEMENT  // Fund supply to agency
  VERSEMENT        // Deposit from agency to central cash
}

enum RequestStatus {
  SUBMITTED        // Initial state when agency creates request
  VALIDATED        // Central Cash validated the request
  REJECTED         // Central Cash rejected the request
  ASSIGNED         // Tunisia Security assigned team
  DISPATCHED       // Tunisia Security confirmed dispatch
  RECEIVED         // Agency confirmed receipt
  COMPLETED        // Request fully completed
  CANCELLED        // Request cancelled
}

enum DenominationType {
  BILL   // Paper money
  COIN   // Metal money
}
